--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 
-*{
-  font-family:'Josefin Sans', sans-serif; ;
+* {
+  font-family: "Josefin Sans", sans-serif;
 }
 
 body,
@@ -15,8 +15,8 @@ html {
 }
 
 a {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #000000;
 }
 
 .Home {
@@ -130,291 +130,292 @@ a {
 }
 
 .paleta-escolhida-espaco {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-  }
-  
-  #idPaleta {
-    padding: 0.5rem;
-    width: 315px;
-    border: none;
-    border-radius: 0.2rem;
-  }
-  
-  #idPaletaButton {
-    background-color: transparent;
-    border: 2px solid #9400d3;
-    padding: 0.4rem;
-    color: #9400d3;
-    font-weight: 600;
-    border-radius: 0.2rem;
-    width: 330px;
-    margin-top: 0.5rem;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    font-size: 1rem;
-  }
-  
-  #idPaletaButton:hover {
-    background-color: #9400d3;
-    color: #ffffff;
-  }
-  
-  #paleta-escolhida-input-espaco {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+}
 
+#idPaleta {
+  padding: 0.5rem;
+  width: 315px;
+  border: none;
+  border-radius: 0.2rem;
+}
+
+#idPaletaButton {
+  background-color: transparent;
+  border: 2px solid #9400d3;
+  padding: 0.4rem;
+  color: #9400d3;
+  font-weight: 600;
+  border-radius: 0.2rem;
+  width: 330px;
+  margin-top: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  font-size: 1rem;
+}
+
+#idPaletaButton:hover {
+  background-color: #9400d3;
+  color: #ffffff;
+}
+
+#paleta-escolhida-input-espaco {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.Header {
+  max-width: 1110px;
+  margin: 0 auto 25px auto;
+  position: relative;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin: 20px 0 35px 0;
+}
+
+.Logo {
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 340px;
+  height: 45px;
+}
+
+.Logo__titulo {
+  position: absolute;
+  left: 55px;
+  font-family: "Exo";
+  font-weight: 700;
+  font-size: 2.5em;
+}
+
+.Logo__icone {
+  position: absolute;
+  left: -20px;
+  top: -15px;
+}
+
+.Sacola {
+  position: relative;
+}
+
+.Sacola__icone {
+  cursor: pointer;
+  transform: scale(1);
+}
+
+.Sacola__icone:hover {
+  transform: scale(1.2);
+}
+
+.Sacola__badge {
+  background-color: red;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  position: absolute;
+  color: white;
+  font-size: 0.9em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  bottom: 0;
+  right: 0;
+}
+
+@media (max-width: 1220px) {
   .Header {
-    max-width: 1110px;
-    margin: 0 auto 25px auto;
-    position: relative;
+    max-width: 720px;
   }
-  
+}
+
+@media (max-width: 840px) {
+  .Header {
+    max-width: 320px;
+  }
+}
+
+@media (max-width: 400px) {
+  .Header {
+    max-width: 250px;
+  }
+
   .row {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    margin: 20px 0 35px 0;
+    column-gap: 20px;
   }
-  
-  .Logo {
-    display: flex;
-    align-items: center;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.3);
-    width: 340px;
-    height: 45px;
-  }
-  
+
   .Logo__titulo {
-    position: absolute;
-    left: 55px;
-    font-family: "Exo";
-    font-weight: 700;
-    font-size: 2.5em;
+    font-size: 1.5em;
   }
-  
-  .Logo__icone {
-    position: absolute;
-    left: -20px;
-    top: -15px;
-  }
-  
-  .Sacola {
-    position: relative;
-  }
-  
-  .Sacola__icone {
-    cursor: pointer;
-    transform: scale(1);
-  }
+}
 
-  .Sacola__icone:hover{
-    transform: scale(1.2);
-  }
-  
-  .Sacola__badge {
-    background-color: red;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    vertical-align: middle;
-    position: absolute;
-    color: white;
-    font-size: 0.9em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    bottom: 0;
-    right: 0;
-  }
-  
-  @media (max-width: 1220px) {
-    .Header {
-      max-width: 720px;
-    }
-  }
-  
-  @media (max-width: 840px) {
-    .Header {
-      max-width: 320px;
-    }
-  }
-  
-  @media (max-width: 400px) {
-    .Header {
-      max-width: 250px;
-    }
-  
-    .row {
-      column-gap: 20px;
-    }
-  
-    .Logo__titulo {
-      font-size: 1.5em;
-    }
-  }
+.default-button {
+  position: absolute;
+  top: 92px;
+  background-color: transparent;
+  border: 2px solid #9400d3;
+  padding: 0.4rem;
+  color: #9400d3;
+  font-weight: 600;
+  border-radius: 0.2rem;
+  width: 280px;
+  letter-spacing: 0.1rem;
+  margin-top: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  font-size: 1rem;
+}
 
-  .default-button {
-    position: absolute;
-    top: 92px;
-    background-color: transparent;
-    border: 2px solid #9400d3;
-    padding: 0.4rem;
-    color: #9400d3;
-    font-weight: 600;
-    border-radius: 0.2rem;
-    width: 280px;
-    letter-spacing: 0.1rem;
-    margin-top: 0.5rem;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    font-size: 1rem;
-  }
-  
-  .default-button:hover {
-    background-color: #9400d3;
-    color: #ffffff;
-  }
-  
-  .modal-overlay{
-    background-color: #00000050;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    overflow-y: auto;
-  }
-  
-  .modal {
-    margin: 1rem;
-    width: 100%;
-    max-width: 600px;
-    height: auto;
-    min-height: 300px;
-    background-color: #fff;
-    border-radius: .8rem;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
-  
-  .modal-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-image: radial-gradient(
-      farthest-corner at 40px 40px,
-      #50c5ee 60%,
-      #00d4ff80 100%
-    );
-    padding: 0.5rem;
-  }
-  
-  .close-modal{
-    text-decoration: none;
-    color: #000000;
-    font-size: 2rem;
-    transform: scale(0.7);
-    margin-right: 0.3rem;
-    transition: 0.3s ease-in-out;
-    cursor: pointer;
-  }
-  
-  .close-modal:hover{
-    transform: scale(1)
-  }
-  
-  .modal-body{
-    padding: .5rem 1rem;
-  }
-  
-  .modal-body div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .modal-body div input, textarea{
-    width: 100%;
-    padding: .5rem;
-    font-size: .8rem;
-    outline: none;
-    border: solid 1px rgb(167, 167, 167);
-    margin-bottom: .4rem;
-    border-radius: .3rem;
-  }
-  
-  .modal-body div button {
-    padding: .5rem;
-    width: 30%;
-    font-size: 1rem;
-    background-color: transparent;
-    color: #0097ce;
-    border: solid 1px #0097ce;
-    border-radius: .3rem;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .modal-body div button:hover{
-    background-color: #0097ce;
-    color: #fff;
-  }
-  
-  .button-modal-create{
-    display: flex;
-    justify-content: flex-end;
-  }
+.default-button:hover {
+  background-color: #9400d3;
+  color: #ffffff;
+}
 
-  .Acoes {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .Acoes__editar,
-  .Acoes__deletar {
-    border: none;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0.3rem;
-    max-width: 280px;
-    text-align: center;
-    font-weight: 700;
-    text-transform: uppercase;
-    cursor: pointer;
-    width: 48%;
-  }
-  
-  .Acoes__editar {
-    background-color: blue;
-    width: 100%;
-  }
+.modal-overlay {
+  background-color: #00000050;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+}
 
-  .Acoes__editar:hover{
-      background-color: darkblue;
-      color: #fff;
-  }
-  
-  .Acoes__deletar {
-    background-color: red;
-    width: 100%;
-  }
+.modal {
+  margin: 1rem;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  min-height: 300px;
+  background-color: #fff;
+  border-radius: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-  .Acoes__deletar:hover{
-      background-color: darkred;
-      color: #fff;
-  }
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: radial-gradient(
+    farthest-corner at 40px 40px,
+    #50c5ee 60%,
+    #00d4ff80 100%
+  );
+  padding: 0.5rem;
+}
+
+.close-modal {
+  text-decoration: none;
+  color: #000000;
+  font-size: 2rem;
+  transform: scale(0.7);
+  margin-right: 0.3rem;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.close-modal:hover {
+  transform: scale(1);
+}
+
+.modal-body {
+  padding: 0.5rem 1rem;
+}
+
+.modal-body div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-body div input,
+textarea {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  outline: none;
+  border: solid 1px rgb(167, 167, 167);
+  margin-bottom: 0.4rem;
+  border-radius: 0.3rem;
+}
+
+.modal-body div button {
+  padding: 0.5rem;
+  width: 30%;
+  font-size: 1rem;
+  background-color: transparent;
+  color: #0097ce;
+  border: solid 1px #0097ce;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.modal-body div button:hover {
+  background-color: #0097ce;
+  color: #fff;
+}
+
+.button-modal-create {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Acoes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Acoes__editar,
+.Acoes__deletar {
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 0.3rem;
+  max-width: 280px;
+  text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+  width: 48%;
+}
+
+.Acoes__editar {
+  background-color: blue;
+  width: 100%;
+}
+
+.Acoes__editar:hover {
+  background-color: darkblue;
+  color: #fff;
+}
+
+.Acoes__deletar {
+  background-color: red;
+  width: 100%;
+}
+
+.Acoes__deletar:hover {
+  background-color: darkred;
+  color: #fff;
+}
